[package]

name = "threadpool"
version = "1.8.0"
authors = ["The Rust Project Developers", "Corey Farwell <coreyf@rwell.org>", "Stefan Schindler <dns2utf8@estada.ch>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-threadpool/rust-threadpool"
homepage = "https://github.com/rust-threadpool/rust-threadpool"
documentation = "https://docs.rs/threadpool"
description = """
A thread pool for running a number of jobs on a fixed set of worker threads.
"""
keywords = ["threadpool", "thread", "pool", "threading", "parallelism"]
categories = ["concurrency", "os"]
edition = "2018"

[dependencies]
#num_cpus = "1.6"

[dependencies.sgx_tstd]
features = ["thread"]
git = "https://github.com/apache/teaclave-sgx-sdk"
rev = "v1.1.1"

[dependencies.testings]
branch = "rsgx1.1.1"
git = "https://github.com/sammyne/testing-rsgx"
optional = true
package = "testing"

[features]
default = []
testing = ["testings"]